--- a/barberia-backend/package.json
+++ b/barberia-backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -18,6 +20,4 @@
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.3"
   }
-  
 }
-
