--- a/barberia-frontend/package.json
+++ b/barberia-frontend/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.15.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "web-vitals": "^2.1.4"
   },
