--- a/barberia-frontend/package.json
+++ b/barberia-frontend/package.json
@@ -8,15 +8,17 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/lab": "^6.0.0-beta.13",
     "@mui/material": "^6.1.5",
-    "@mui/x-date-pickers": "^7.21.0",
+    "@mui/x-date-pickers": "^7.22.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "web-vitals": "^2.1.4"
