--- a/barberia-frontend/package.json
+++ b/barberia-frontend/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-big-calendar": "^1.15.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
