--- a/barberia-frontend/package.json
+++ b/barberia-frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
