--- a/barberia-frontend/package.json
+++ b/barberia-frontend/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
