--- a/barberia-frontend/package.json
+++ b/barberia-frontend/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.13.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
