--- a/barberia-backend/package.json
+++ b/barberia-backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
   "start": "node server.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
+  "build": "npm run build",
+  "install": "npm install"
 },
   "keywords": [],
   "author": "",
