--- a/barberia-frontend/Dockerfile
+++ b/barberia-frontend/Dockerfile
@@ -1,12 +1,12 @@
 # Etapa de construcción
 FROM node:18 AS build
 WORKDIR /app
-COPY package.json package-lock.json ./
+COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Etapa de servidor web
+# Etapa de producción
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
