--- a/barberia-backend/Dockerfile
+++ b/barberia-backend/Dockerfile
@@ -1,16 +1,20 @@
-# Usa Node.js como imagen base
+# Usa una imagen base de Node.js
 FROM node:18
 
 # Establece el directorio de trabajo
 WORKDIR /app
 
-# Copia los archivos de tu proyecto
-COPY package.json package-lock.json ./
+# Copia los archivos de package.json y package-lock.json
+COPY package*.json ./
+
+# Instala las dependencias
 RUN npm install
+
+# Copia el resto de los archivos de la aplicación
 COPY . .
 
-# Expone el puerto del backend (asegúrate de que coincida con el que usa tu servidor)
+# Expone el puerto en el que la aplicación se ejecuta
 EXPOSE 5000
 
-# Inicia el servidor
+# Comando para iniciar la aplicación
 CMD ["npm", "start"]
